--- a/kellaspace-frontend-app/package.json
+++ b/kellaspace-frontend-app/package.json
@@ -15,7 +15,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.9.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
