--- a/kellaspace-frontend-app/package.json
+++ b/kellaspace-frontend-app/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.14.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.1"
+    "react-router": "^7.9.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
