--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,13 +22,13 @@
     "swiper": "^12.0.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
+    "@chromatic-com/storybook": "^3.0.2",
     "@eslint/js": "^9.35.0",
-    "@storybook/addon-a11y": "^9.1.7",
-    "@storybook/addon-docs": "^9.1.7",
-    "@storybook/addon-vitest": "^9.1.7",
-    "@storybook/react-vite": "^9.1.7",
-    "@storybook/test": "^9.0.0-alpha.2",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-docs": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
@@ -38,13 +38,12 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.1.7",
     "globals": "^16.4.0",
     "playwright": "^1.55.0",
-    "storybook": "^9.1.7",
+    "storybook": "^8.6.14",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6",
+    "vite": "^6.0.0",
     "vitest": "^3.2.4"
   }
 }
