--- a/my-app/package.json
+++ b/my-app/package.json
@@ -26,6 +26,8 @@
     "@eslint/js": "^9.35.0",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-docs": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
     "@types/node": "^24.5.2",
