--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "swiper": "^12.0.2"
   },
