--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
     "framer-motion": "^12.23.16",
     "motion": "^12.23.16",
     "react": "^19.1.1",
