--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,10 +12,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.7.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.9",
     "framer-motion": "^12.23.16",
+    "mongodb": "^6.20.0",
     "motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
