--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.9",
     "framer-motion": "^12.23.16",
+    "html-react-parser": "^5.2.7",
     "mongodb": "^6.20.0",
     "motion": "^12.23.16",
     "react": "^19.1.1",
