--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
+    "react-spinners": "^0.17.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
