--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,16 +16,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.23.16",
     "html-react-parser": "^5.2.7",
     "mongodb": "^6.20.0",
     "motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-spinners": "^0.17.0",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.0.2",
